# otus-basic-homeworks

./: requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/ping/: main.py
homework_03/ping/views/: ping.py
homework_04/: docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: app.py  pyproject.toml
homework_05/templates/: about.html  index.html  layout.html  navbar.html
