[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["Петр Черкесов <petr.cherkesov@playrix.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
