[tool.poetry]
name = "homework-05"
version = "0.1.0"
description = ""
authors = ["Петр Черкесов <petr.cherkesov@playrix.com>"]
readme = "README.md"
packages = [{include = "homework_05"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
